fixed text align for multiline texts

--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -611,9 +611,8 @@ body {
     pointer-events: auto;
 
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: stretch;
 
     color: var(--rio-local-text-color);
 }
